@@ -1,11 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<language id="automake" _name="Automake" version="2.0" _section="Sources"
-          globs="Makefile.am">
-  <definitions>
-    <context id="automake">
-      <include>
-        <context ref="makefile:makefile:*"/>
-      </include>
-    </context>
-  </definitions>
-</language>
